arqlibrarian-gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: arq-gateway:latest
          name: gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
      restartPolicy: Always
