arqlibrarian-gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8083
  type: NodePort
